--- a/AULA006/ex004.html
+++ b/AULA006/ex004.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" href="js.svg" type="image/x-icon">
-    <title>Aula 04</title>
+    <title>Aula 04 : Ex004</title>
     <style>
         body {
             background-color: rgb(104, 104, 173);
@@ -17,13 +17,11 @@
 </head>
 
 <body>
-    <h1>Olá Mundo</h1>
-    <p>Se funcionar, adeus maldição!!!</p>
     <script>
-        var n1 = Number(prompt('Digite um número: '))
-        var n2 = Number(prompt('Digite um número: '))
-        var total = n1 + n2
-        alert(`A soma entre ${n1} e ${n2} é igual a ${total}!`)
+        var nome = prompt('Qual é o seu nome?')
+        document.write(`Olá, ${nome}! Seu nome tem ${nome.length} letas.<br>`)
+        document.write(`Seu nome em maiúsculas é ${nome.toUpperCase()}<br>`)
+        document.write(`Seu nome em minúsculas é ${nome.toLocaleLowerCase()}`)
     </script>
 </body>
 
