--- a/AULA009/ex005.html
+++ b/AULA009/ex005.html
@@ -16,10 +16,14 @@
     <h1>Iniciando estudos com DOM</h1>
     <p>Aqui vai o Resultado</p>
     <p>Aprendenod a usar o <strong>DOM</strong> JavaSctipt</p>
-    <div>Clique em mim</div>
-
+    <div class="msg">Clique em mim</div>
 <script>
-    
+    var corpo = window.document.body
+    var p1 = window.document.getElementsByTagName('p')[1]
+
+    var d = document.querySelector('.msg')
+    d.style.color = 'green'
+
 </script>
 
 </body>
