--- a/AULA010/ex007.html
+++ b/AULA010/ex007.html
@@ -12,6 +12,10 @@
             font: normal 18pt Arial;
             width: 100px;
             text-align: center;
+            border: 1px black solid;
+            border-radius: 4px;
+            padding: 5px;
+            font-size: 1.2em;
         }
         #res{
             margin-top: 10px;
@@ -20,8 +24,8 @@
 </head>
 <body>
     <h1>Somando valores</h1>
-    <input type="number" name="txtn1" id="txtn1"> +
-    <input type="number" name="txtn2" id="txtn2">
+    <input type="number" name="txtn1" id="txtn1" placeholder="0"> +
+    <input type="number" name="txtn2" id="txtn2" placeholder="0">
     <input type="button" value="Somar" onclick="somar()">
     <div id="res">Resultado</div>
 
