--- a/AULA12_ex/ex001/index.html
+++ b/AULA12_ex/ex001/index.html
@@ -6,13 +6,17 @@
     <title>Relógio</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body onload="carregar()">
     <header>
         <h1>Hora do Dia</h1>
     </header>
     <section>
-        <div id="textohora"></div>
-        <div id="imghora"></div>
+        <div id="msg">
+            Aqui vai aparecer a mensagem
+        </div>
+        <div id="foto">
+            <img src="images/noite.jpg" alt="" id="imagem">
+        </div>
     </section>
     <footer>
         &#169;<strong>Igor Theodoro</strong>
