--- a/AULA014_ex/ex002/tabuada.html
+++ b/AULA014_ex/ex002/tabuada.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="PT-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,14 +12,17 @@
     </header>
     <section>
         <div>
-            <p>Numero: <input type="number" name="" id="">
-                <input type="button" value="Gerar Tabuada">
+            <p>Numero: <input type="number" name="num" id="txtn">
+                <input type="button" value="Gerar Tabuada" onclick="tabuada()">
             </p>
         </div>
         <div id="res">
-            <select name="" id=""></select>
+            <select name="tabuada" id="seltab" size="10">
+                
+            </select>
         </div>
     </section>
     <footer>&#169;<strong>Igor Theodoro</strong></footer>
+    <script src="sript.js"></script>
 </body>
 </html>
