--- a/AULA014_ex/ex002/tabuada.html
+++ b/AULA014_ex/ex002/tabuada.html
@@ -17,7 +17,7 @@
             </p>
         </div>
         <div id="res">
-            <select name="tabuada" id="seltab" size="10">
+            <select name="tabuada" id="seltab">
                 
             </select>
         </div>
